--- a/roles/node_sanitise/tasks/enable_ansible_sudo_access.yaml
+++ b/roles/node_sanitise/tasks/enable_ansible_sudo_access.yaml
@@ -6,5 +6,5 @@
       regexp: '^%wheel'
       line: '%wheel ALL=(ALL) NOPASSWD: ALL'
       validate: visudo -cf %s
-    remote_user: root
+    become: yes
 
