--- a/roles/node_configure/tasks/install_essential_packages.yaml
+++ b/roles/node_configure/tasks/install_essential_packages.yaml
@@ -10,5 +10,7 @@
       - tree
       - vim
       - git
-      - rubygem-foreman_scap_client
+      - openscap
+      - openscap-scanner
+      - openscap-utils
     become: yes
